--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AsyncExample</string>
     <string name="go_to_async_activity_example">Go to async activity example</string>
+    <string name="go_to_thread_example">Go to thread example</string>
 </resources>
