Finished Thread Example with mosquitos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AsyncExample</string>
     <string name="go_to_async_activity_example">Go to async activity example</string>
     <string name="go_to_thread_example">Go to thread example</string>
+    <string name="run_button">Запуск</string>
+    <string name="text_info">-</string>
 </resources>
